Update info plist to set status bar light content and include http exception
Ombd's url is HTTP, and since iOS 9 apps cannot make http requests, only https
So we had to include an exception in the plist to be able to make a HTTP request
for movie searchs

--- a/MovieSearch/MovieSearch/Base.lproj/Main.storyboard
+++ b/MovieSearch/MovieSearch/Base.lproj/Main.storyboard
@@ -187,6 +187,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bL0-gt-sFm" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6f3-OW-lBV" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1Sd-af-OQl">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
